Gjør test grønn + refaktorering + slett død kode